--- a/css/style-single-page.css
+++ b/css/style-single-page.css
@@ -11,11 +11,11 @@ a.brand img {
 }
 #profile h2, #skills h2, #work h2, #resume h2 {
 	font-weight:normal;
-	color: #39D084;
+	color: #edbb33;
 }
 /***** Profile *****/
 	#profile h1 {
-	color:#39d084;
+	color:#edbb33;
 	font-weight: normal;
 }
 #profile h3 {
@@ -35,8 +35,8 @@ a.hire-me {
 	display: inline-block;
  *display: inline;
 	padding:20px 60px;
-	background:#39d084;
-	color:#fff;
+	background:#49494a;
+	color:#edbb33;
 	text-transform:uppercase;
 	font-size:26px;
 	margin:20px 0;
