--- a/css/style-single-page.css
+++ b/css/style-single-page.css
@@ -4,12 +4,12 @@ a.brand img {
 	border-radius:50%;
 	border:5px solid #fff;
 }
-#profile, #skills, #work, #resume {
+#profile, #skills, #work, #contacts {
 	padding:30px 0;
 	padding-top: 120px;
 	min-height:500px;
 }
-#profile h2, #skills h2, #work h2, #resume h2 {
+#profile h2, #skills h2, #work h2, #contacts h2 {
 	font-weight:normal;
 	color: #edbb33;
 }
@@ -256,11 +256,11 @@ ul.work-images li img {
 ul.work-images li img:hover {
 	opacity:0.1;
 }
-/***** Resume container *****/
-#resume h3 {
+/***** Contacts container *****/
+#contacts h3 {
 	margin:60px 0;
 }
-#resume .btn-center {
+#contacts .btn-center {
 	text-align:center;
 }
 .footer {
